# Kino_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_extended_features.py  0003_multi_source_collections.py  0004_v4_platform_features.py  0005_discovered_chats.py
src/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  plugin.py
src/database/: __init__.py  base.py  engine.py  session.py
src/filters/: __init__.py  admin_filter.py  movie_code_filter.py  owner_filter.py
src/handlers/: __init__.py
src/keyboards/: __init__.py  callback_data.py
src/middlewares/: __init__.py  database_middleware.py  duplicate_request_middleware.py  error_handling_middleware.py  throttling_middleware.py  user_activity_middleware.py
src/models/: __init__.py  action_log.py  ad_campaign.py  admin.py  admin_session.py  backup_record.py  blacklist_entry.py  bot_setting.py  broadcast.py  discovered_chat.py  force_sub_channel.py  force_sub_confirmation.py  media_collection.py  media_source.py  movie.py  payment_request.py  premium_history.py  referral_reward.py  reserved_code.py  search_log.py  support_message.py  system_log.py  user.py  whitelist_entry.py
src/repositories/: __init__.py  action_log_repository.py  ad_campaign_repository.py  admin_repository.py  admin_session_repository.py  base.py  (+19 more)
tests/: conftest.py  test_code_generator.py  test_movie_service.py  test_user_service.py  test_validators.py
(+84 files in other folders)
