[project]
name = "kino-bot"
version = "1.0.0"
description = "Production-ready Telegram movie (Kino) bot built with aiogram 3, SQLAlchemy and Clean Architecture."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kino Bot Team" }]
keywords = ["telegram", "bot", "aiogram", "movies", "kino"]

dependencies = [
  "aiogram==3.15.0",
  "SQLAlchemy==2.0.36",
  "greenlet==3.1.1",
  "aiosqlite==0.20.0",
  "alembic==1.14.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "APScheduler==3.10.4",
  "aiohttp==3.10.11",
  "redis==5.2.1",
  "python-dotenv==1.0.1",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
  "mypy==1.13.0",
  "black==24.10.0",
]

[project.scripts]
kino-bot = "src.main:run"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
